added blog link

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About Me</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Message Me</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#cont">My Contacts</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="https://dev-ngatia.github.io/Blog/">My Blog</a></li>
                     </ul>
                 </div>
             </div>
@@ -143,6 +144,7 @@
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/steven-mwangi-425364a0" target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.tiktok.com/@nga.tia" target="_blank"><i class="fab fa-fw fa-tiktok"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://open.spotify.com/user/i5sjwzy8vspxe4viszslpyq56" target="_blank"><i class="fab fa-fw fa-spotify"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://dev-ngatia.github.io/Blog/" target="_blank"><i class="fab fa-solid fa-user-secret"></i></a>
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-3">
