--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
                 <div class="row">
                     <div class="col-lg-6 ms-auto">
                       <form action="mailto:ngatia3223@gmail.com" method="post" enctype="text/plain" target="_blank">
-                      <h4>Your Name:</h4><input type="text" name="Your Name" value=""><br>
-                      <h4>Your Phone Number (+XXX):</h4><input type="text" name="Your Phone Number" value="">
-                      <h4>Your Email Address:</h4><input type="email" name="Your Email Address" value="">
+                      <h4>Your Name:</h4><input class="btn btn-xl btn-outline-light" type="text" name="Your Name" value=""><br>
+                      <h4>Your Phone Number (+XXX):</h4><input class="btn btn-xl btn-outline-light" type="text" name="Your Phone Number" value="">
+                      <h4>Your Email Address:</h4><input class="btn btn-xl btn-outline-light" type="email" name="Your Email Address" value="">
 
                     </div>
                     <div class="col-lg-4 me-auto"><h3>Your Message:</h3><textarea name="Your Email" rows="6" cols="50"></textarea></div>
