--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <header class="masthead bg-primary text-white text-center" id="portfolio">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/img/header.jpg" alt="..." />
+                <img class="masthead-avatar mb-5" style="border-color: #a81cb2" src="assets/img/header.jpg" alt="..." />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Steven Ngatia Mwangi Freelancer</h1>
                 <!-- Icon Divider-->
@@ -84,7 +84,7 @@
     //display the calculated age
     document.write(age);
 </script> Years old. I am very business minded. If the offer is right, I am willing to learn any business model and hopefully add some value to your organisation. I presently specialize in website development for organizations who want to establish an online gateway where the public can learn more about them.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">I am currently a student at <a style="color: #888888" href="https://strathmore.edu/">Strathmore University</a> Pursuing a <a style="color: #888888" href="https://strathmore.edu/course/diploma-in-business-information-technology/">Diploma in Business Information Technology.</a> I completed High-school in the summer of 2021, after which I took on a 6 month internship at <a style="color: #888888" href="https://milimani.rw/">Milimani Enterprises</a> where I acquired skills in areas such as...
+                    <div class="col-lg-4 me-auto"><p class="lead">I am currently a student at <a style="color: #a81cb2" href="https://strathmore.edu/">Strathmore University</a> Pursuing a <a style="color: #a81cb2" href="https://strathmore.edu/course/diploma-in-business-information-technology/">Diploma in Business Information Technology.</a> I completed High-school in the summer of 2021, after which I took on a 6 month internship at <a style="color: #a81cb2" href="https://milimani.rw/">Milimani Enterprises</a> where I acquired skills in areas such as...
                     <ul>
                       <li>Sales</li>
                       <li>Marketing</li>
@@ -118,14 +118,14 @@
                 <div class="row">
                     <div class="col-lg-6 ms-auto">
                       <form action="mailto:ngatia3223@gmail.com" method="post" enctype="text/plain" target="_blank">
-                      <h4>Your Name:</h4><input class="btn btn-xl btn-outline-light" type="text" name="Your Name" value=""><br>
-                      <h4>Your Phone Number (+XXX):</h4><input class="btn btn-xl btn-outline-light" type="text" name="Your Phone Number" value="">
-                      <h4>Your Email Address:</h4><input class="btn btn-xl btn-outline-light" type="email" name="Your Email Address" value="">
+                      <h4>Your Name:</h4><input class="btn btn-xl btn-outline-light" type="text" name="Your Name" placeholder="Mr./Mrs./Ms..." required><br>
+                      <h4>Your Phone Number:</h4><input class="btn btn-xl btn-outline-light" type="text" name="Your Phone Number" placeholder="If not in Kenya, Please include your country code." required>
+                      <h4>Your Email Address:</h4><input class="btn btn-xl btn-outline-light" type="email" name="Your Email Address" placeholder="Dear Ngatia," required>
 
                     </div>
-                    <div class="col-lg-4 me-auto"><h3>Your Message:</h3><textarea name="Your Email" rows="6" cols="50"></textarea></div>
+                    <div class="col-lg-4 me-auto"><h3>Your Message:</h3><input class="btn btn-xl btn-outline-light" type="text" name="Your Email" placeholder="text" required></div>
                 </div>
-            <input type="submit" class="btn btn-xl btn-outline-light" name="" ></form>
+            <br><br><input type="submit" class="btn btn-xl btn-outline-light" name="" ></form>
               </div>
             </div>
             <hr>
@@ -151,7 +151,7 @@
                         <h4 class="text-uppercase mb-4">Contact Information</h4>
                         <p class="lead mb-0">
                           <strong><u>Email:</u></strong> ngatia3223@gmail.com<br><hr>
-                          <strong><u>Phone Numbers:</u></strong> (+254) 743 349 955 <br> (+254) 773 942 232<br><hr>
+                          <strong><u>Phone Numbers:</u></strong><br> (+254) 743 349 955 <br> (+254) 773 942 232<br><hr>
                           <strong><u>Whatsapp:</u></strong> (+254) 773 942 232 <br> (+254) 743 349 955<br><hr>
                           <strong><u>Telegram:</u></strong> (+254) 743 349 955<hr></p>
                     </div>
