--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <header class="masthead bg-primary text-white text-center" id="portfolio">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" style="border-color: #a81cb2" src="assets/img/header.jpg" alt="..." />
+                <img class="masthead-avatar mb-5" style="border-color: #a81cb2; max-width: 100%; height: auto;" src="assets/img/header.jpg" alt="..." />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Steven Ngatia Mwangi Freelancer</h1>
                 <!-- Icon Divider-->
@@ -119,11 +119,11 @@
                     <div class="col-lg-6 ms-auto">
                       <form action="mailto:ngatia3223@gmail.com" method="post" enctype="text/plain" target="_blank">
                       <h4>Your Name:</h4><input class="btn btn-xl btn-outline-light" type="text" name="Your Name" placeholder="Mr./Mrs./Ms..." required><br>
-                      <h4>Your Phone Number:</h4><input class="btn btn-xl btn-outline-light" type="text" name="Your Phone Number" placeholder="If not in Kenya, Please include your country code." required>
-                      <h4>Your Email Address:</h4><input class="btn btn-xl btn-outline-light" type="email" name="Your Email Address" placeholder="Dear Ngatia," required>
-
-                    </div>
-                    <div class="col-lg-4 me-auto"><h3>Your Message:</h3><input class="btn btn-xl btn-outline-light" type="text" name="Your Email" placeholder="text" required></div>
+                      <h4>Your Phone Number:</h4><input class="btn btn-xl btn-outline-light" type="text" name="Your Phone Number" placeholder="Include your country code." required>
+                          </div>
+                        <div class="col-lg-4 me-auto">
+                      <h4>Your Email Address:</h4><input class="btn btn-xl btn-outline-light" type="email" name="Your Email Address" placeholder="***" required>
+                    <h3>Your Message:</h3><input class="btn btn-xl btn-outline-light" type="text" name="Your Email" placeholder="Dear Ngatia..." required></div>
                 </div>
             <br><br><input type="submit" class="btn btn-xl btn-outline-light" name="" ></form>
               </div>
